--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "easyserver-cli",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "es": "dist/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && npm run dev",
+    "build": "npx tsc && npm link --force",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [
     "easyserver-cli",
@@ -12,7 +18,7 @@
     "server"
   ],
   "author": "sandhi.yz@gmail.com",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/inquirer": "^7.3.1",
     "chalk": "^4.1.0",
@@ -29,5 +35,8 @@
     "@types/node": "^14.14.16",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
